--- a/index.html
+++ b/index.html
@@ -2,22 +2,52 @@
 <html>
   <head>
     <title>My App</title>
-    <meta name="viewport" content="width=device-width,
-                                   initial-scale=1.0,
-                                   maximum-scale=1.0,
-                                   user-scalable=no">
-    <link rel="stylesheet" href="http://cdn.kik.com/app/1/default.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="default.css">
     <style>
-      /* put your styles here */
+      /* TODO */
     </style>
   </head>
+
   <body>
-    <h1>Hello World</h1>
-    <!-- put your pages here -->
-    <script src="http://zeptojs.com/zepto.min.js"></script>
-    <script src="http://cdn.kik.com/app/1/app.js"></script>
+    <div class="app-page" data-page="home">
+      <div class="app-topbar">
+        <div class="app-title">Home page</div>
+      </div>
+      <div class="app-content">
+        <div class="app-section">
+          <div class="app-button" data-target="page2">Go to Page 2</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="app-page" data-page="page2">
+      <div class="app-topbar">
+        <div class="app-button left" data-back="true">Back</div>
+        <div class="app-title">Page 2</div>
+      </div>
+      <div class="app-content">
+        Page 2 is lonely
+      </div>
+    </div>
+
+    <script src="zepto.js"></script>
+    <script src="app.js"></script>
     <script>
-      /* put your javascript here */
+      App.populator('home', function (page) {
+        // put stuff here
+      });
+
+      App.populator('page2', function (page) {
+        // put stuff here
+      });
+
+      try {
+        App.restore();
+      }
+      catch (err) {
+        App.load('home');
+      }
     </script>
   </body>
 </html>
