--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<div data-role="content">	
 			<p>I'm first in the source order so I'm shown as the page.</p>		
-			<p>View internal page called <a href="#bar">bar</a></p>	
+			<p>View internal page called <a href="#bar"  data-transition="flip">bar</a></p>	
 		</div><!-- /content -->
 
 		<div data-role="footer">
