Made it bigger and renamed placeholder

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="app-content">
 			<img class="logo" src="images/dyno-logo.png">
 			<form id="login-form">
-				<input class="app-input first" type="email" placeholder="example@salesforce.com">
+				<input class="app-input first" type="email" placeholder="email">
 				<input class="app-input last" type="password" placeholder="password">
 				<div class="app-button center" data-target="home">Sign In with Salesforce</div>
 			</form>
