Added new splash image and more apps to test scrolling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- Splash -->
 	<div class="app-page" id="splash-page" data-page="splash">
 		<div class="app-content">
-			<img width="100%" height="100%" src="images/login-bg.png">
+			<img width="100%" height="100%" src="images/splash.png">
 		</div>
 	</div>
 	
@@ -73,7 +73,7 @@
 
 	<script>
 		App.setDefaultTransition('slide-left');
-		App.load('splash');
+		App.load('home');
 	</script>
 
 </body>
