--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 <body>
 
 	<!-- Templates -->
-	
+
 	<script id="app-template" type="text/x-swig-template">
 		<div class="app app-button" data-target="app">
-			<h3>{{ app.name }}</h3>
-			<p>{{ app.description }}</p>
+			<div class="glow"></div>
+			<div class="app-thumbnail"></div>
+			<div class="app-details">
+				<h3>{{ app.name }}</h3>
+				<p>{{ app.description }}</p>
+			</div>
 		</div>
 	</script>
 
@@ -44,7 +48,6 @@
 	<div class="app-page" id="home-page" data-page="home">
 		<div class="app-topbar">
 			<div class="app-button left" data-back="true">Back</div>
-			<div class="app-button right" data-target="page2">Settings</div>
 			<div class="app-title">Select an App</div>
 		</div>
 		<div class="app-content">
