Initial app page design

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 	<!-- Home -->
 	<div class="app-page" id="home-page" data-page="home">
 		<div class="app-topbar">
-			<div class="app-button left" data-back="true">Back</div>
 			<div class="app-title">Select an App</div>
 		</div>
 		<div class="app-content">
@@ -59,12 +58,24 @@
 	<!-- App -->
 	<div class="app-page" id="app-page" data-page="app">
 		<div class="app-topbar">
-			<div class="app-button left" data-back="true">Back</div>
-			<div class="app-button right" data-target="create">Create</div>
-			<div class="app-title">Awesome App 2</div>
+			<div class="app-button left" data-back="true">&lt; Back</div>
+			<div class="app-title"></div>
 		</div>
 		<div class="app-content">
-			Page 2 is lonely
+			<div class="app-image"></div>
+			<div class="app-box">
+				<h3>Description</h3>
+				<div class="app-description app-text" class="app-section"></div>
+			</div>
+			<div class="app-box">
+				<h3>App Options</h3>
+				<div class="app-options app-text" class="app-section">
+					There are no options.
+				</div>
+			</div>
+			<div class="app-options app-text" class="app-section">
+				<div class="app-button">Create this App</div>
+			</div>
 		</div>
 	</div>
 
