Fixed back button

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<!-- App -->
 	<div class="app-page" id="app-page" data-page="app">
 		<div class="app-topbar">
-			<div class="app-button left" data-back="true">&lt; Back</div>
+			<div class="app-button left" data-back="true">Back</div>
 			<div class="app-title"></div>
 		</div>
 		<div class="app-content">
