Modified create app button, changed back button

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 	<!-- App -->
 	<div class="app-page" id="app-page" data-page="app">
 		<div class="app-topbar">
-			<div class="app-button left" data-back="true"></div>
 			<div class="app-title"></div>
+			<div class="app-button left" data-back="true">&lt Back</div>
 		</div>
 		<div class="app-content">
 			<div class="app-image"></div>
