--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 				</div>
 				<div id="login-button" class="app-button center">Sign In with Salesforce</div>
 			</form>
+			<div id="login-error">There was a problem.</div>
 		</div>
 	</div>
 
@@ -138,7 +139,8 @@
 	<script src="pages/app.js"></script>
 	<script src="pages/create.js"></script>
 
-	<script src="fake-api.js"></script>
+	<!-- <script src="fake-api.js"></script> -->
+	<script src="api.js"></script>
 
 	<script>
 		var Api = new DynoAPI();
