Fixing the API so that it uses hacky sessions

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 				<div id="login-button" class="app-button center">Sign In with Salesforce</div>
 			</form>
 			<div id="login-error">There was a problem.</div>
+			<div class="app-space"></div>
 		</div>
 	</div>
 
@@ -114,7 +115,7 @@
 	<div class="app-page" id="create-page" data-page="create">
 		<div class="app-topbar">
 			<div class="app-title"></div>
-			<div class="app-button left" data-back="true">&lt Back</div>
+			<div class="app-button left" data-back="true">&lt; Back</div>
 		</div>
 		<div class="app-content">
 			<div class="app-loading">
@@ -145,7 +146,7 @@
 	<script>
 		var Api = new DynoAPI();
 		App.setDefaultTransition('slide-left');
-		App.load('home');
+		App.load('splash');
 	</script>
 
 </body>
