--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
 		</div>
 		<div class="app-content">
 			<div class="app-loading">
-				<div class="app-loading-text">Please wait while Dyno creates your app...</div>
+				<div class="app-loading-text">
+					Please wait while Dyno creates your app...<br /><br />
+					This may take a few minutes.
+				</div>
 				<div class="dyno"></div>
 			</div>
 			<div class="app-loaded">
@@ -140,8 +143,10 @@
 	<script src="pages/app.js"></script>
 	<script src="pages/create.js"></script>
 
-	<!-- <script src="fake-api.js"></script> -->
 	<script src="api.js"></script>
+	<!-- ->
+	<script src="fake-api.js"></script>
+	<!- -->
 
 	<script>
 		var Api = new DynoAPI();
